upgraded underlying WebView

--- a/src/Widgets.csproj
+++ b/src/Widgets.csproj
@@ -19,9 +19,9 @@
   <ItemGroup>
     <Page Include="**\*.xaml" SubType="Designer" Generator="MSBuild:Compile" />
     <PackageReference Include="HtmlAgilityPack" Version="1.8.5" />
-    <PackageReference Include="JetBrains.Annotations" Version="11.1.0" />
+    <PackageReference Include="JetBrains.Annotations" Version="2018.2.1" />
     <PackageReference Include="Microsoft.CSharp" Version="4.5.0" />
-    <PackageReference Include="Microsoft.Toolkit.Win32.UI.Controls" Version="3.0.0" />
+    <PackageReference Include="Microsoft.Toolkit.Wpf.UI.Controls.WebView" Version="5.0.1" />
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
     <PackageReference Include="Prism.Core" Version="7.0.0.396" />
     <PackageReference Include="System.Net.Http" Version="4.3.3" />
