--- a/src/Widgets.csproj
+++ b/src/Widgets.csproj
@@ -4,7 +4,7 @@
     <TargetFramework>net462</TargetFramework>
     <RootNamespace>LostTech.Stack.Widgets</RootNamespace>
     <AssemblyName>LostTech.Stack.Widgets</AssemblyName>
-    <LanguageTargets>$(MSBuildExtensionsPath)\$(VisualStudioVersion)\Bin\Microsoft.CSharp.targets</LanguageTargets>
+    <LanguageTargets>$(MSBuildBinPath)\Microsoft.CSharp.targets</LanguageTargets>
   </PropertyGroup>
 
   <ItemGroup>
