--- a/src/Widgets.csproj
+++ b/src/Widgets.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net6.0-windows10.0.19041.0</TargetFramework>
     <RootNamespace>LostTech.Stack.Widgets</RootNamespace>
     <AssemblyName>LostTech.Stack.Widgets</AssemblyName>
+    <Nullable>enable</Nullable>
     <UseWPF>true</UseWPF>
     <UseWindowsForms>true</UseWindowsForms>
     <VersionPrefix>3.0</VersionPrefix>
